# libvmod-substring

./: Makefile.am  README.rst  configure.ac
src/: Makefile.am  vmod_substring.c  vmod_substring.vcc
src/tests/: test01.vtc
